# sqltk

./: CONTRIBUTING.md  Cargo.toml  NOTES.md  README.md  build.rs  justfile  pull-upstream-sqlparser.sh
build_helpers/: codegen.rs  meta.rs  mod.rs  parser.rs  sqlparser_node_extractor.rs  transformable_trait_impls.rs  visitable_trait_impls.rs
crates/sqltk/: Cargo.toml  build.rs
crates/sqltk-analyse/: Cargo.toml
crates/sqltk-analyse/src/: lib.rs
crates/sqltk-analyse/src/model/: column_with_optional_alias.rs  expr_source.rs  mod.rs  projection.rs  provenance.rs  resolution_error.rs  scope_ops.rs  scope_stack.rs  select_item_source.rs  source_item.rs
crates/sqltk-analyse/src/model/schema/: mod.rs  sql_ident.rs
crates/sqltk-analyse/src/provenance/: mod.rs
crates/sqltk-analyse/src/provenance_analyser/: mod.rs  state.rs
crates/sqltk-analyse/src/visitors/: build_projection_columns.rs  mod.rs  trace_expr_sources.rs  update_stack.rs
crates/sqltk-analyse/src/visitors/build_projections/: build_query_projection.rs  build_select_projection.rs  build_set_expr_projection.rs  build_vec_of_select_item_projection.rs  mod.rs
crates/sqltk-analyse/src/visitors/build_sources/: build_expr_sources.rs  build_select_item_sources.rs  mod.rs
crates/sqltk-analyse/src/visitors/build_statement_provenance/: build_delete_provenance.rs  build_insert_provenance.rs  build_select_provenance.rs  build_update_provenance.rs  mod.rs
crates/sqltk-analyse/src/visitors/import_relations/: import_from_cte.rs  import_from_insert.rs  import_from_table_factor.rs  mod.rs
crates/sqltk-analysis/: Cargo.toml
crates/sqltk-analysis/src/: lib.rs  schema_api.rs
crates/sqltk-analysis/src/model/: annotate.rs  annotation_store.rs  annotations.rs  mod.rs  projection.rs  projection_annotation.rs  provenance.rs  resolution_error.rs  schema.rs  scope_ops.rs  scope_stack.rs  source_annotation.rs  sources.rs
crates/sqltk-analysis/src/model/schema/: mod.rs  sql_ident.rs
crates/sqltk-analysis/src/provenance/: mod.rs  state.rs
crates/sqltk-analysis/src/visitors/: annotate_sources.rs  build_projection_columns.rs  lexical_scope.rs  mod.rs  node_path.rs  trace_expr_sources.rs  update_stack.rs
crates/sqltk-analysis/src/visitors/annotate_statement_provenance/: mod.rs
crates/sqltk-analysis/src/visitors/build_projections/: build_query_projection.rs  build_select_projection.rs  build_set_expr_projection.rs  build_vec_of_select_item_projection.rs  mod.rs
crates/sqltk-analysis/src/visitors/build_statement_provenance/: build_delete_provenance.rs  build_insert_provenance.rs  build_select_provenance.rs  build_update_provenance.rs  mod.rs
crates/sqltk-analysis/src/visitors/import_relations/: import_from_cte.rs  import_from_insert.rs  import_from_table_factor.rs  mod.rs
crates/sqltk-analysis/src/visitors/publish_relations/: mod.rs  publish_cte.rs  publish_insert.rs  publish_table_factor.rs
crates/sqltk-codegen/: Cargo.toml  build.rs
crates/sqltk-codegen/build_helpers/: apply_transform_trait_impls.rs  codegen.rs  meta.rs  mod.rs  parser.rs  reachability.rs  sqlparser_node_extractor.rs  visitable_trait_impls.rs
crates/sqltk-codegen/src/: lib.rs
crates/sqltk-core/: Cargo.toml  build.rs
crates/sqltk-core/src/: flow.rs  lib.rs  transform.rs  transformable_impls.rs  visitable_impls.rs  visitor_extensions.rs
crates/sqltk-derive/: Cargo.toml
crates/sqltk-derive/src/: lib.rs
crates/sqltk-derive/tests/: test_derive.rs
crates/sqltk/src/: dispatch.rs  flow.rs  lib.rs  node.rs  prelude.rs  visitable_impls.rs  visitor_stack.rs
src/: lib.rs  transformable_impls.rs  visitable_blanket_impls.rs  visitable_impls.rs  visitor_helper.rs
