[workspace]
resolver = "2"
members = ["packages/*"]

[workspace.package]
edition = "2021"
authors = [
  "James Sadler <james@cipherstash.com>",
  "Robin Howard <robin@cipherstash.com>",
]
repository = "https://github.com/cipherstash/sqltk"
homepage = "https://cipherstash.com"
keywords = ["sqlparser", "database", "sql"]
categories = ["sql", "database"]
