[package]
name = "sqltk-analyse"
version = "0.1.0"
edition = "2021"
description = "Perform semantic analysis of SQL statements"
keywords = ["SQL", "analyse", "analyze", "semantic", "query", "statement", "database", "visitor", "AST"]

[dependencies]
derive_more = "0.99.17"
sqltk-core = { path = "../sqltk-core" }
sqltk = { path = "../sqltk" }
sqlparser = { workspace = true }
bigdecimal = { workspace = true }
thiserror = "1.0.57"
derive-new = "0.6.0"
vec1 = "1.10.1"
unicase = "2.7.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
test-case = "3.3.1"
