[package]
name = "sqltk-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
sqltk = { path = "../sqltk" }
sqlparser = { workspace = true }
bigdecimal = { workspace = true }
thiserror = "1.0.57"
derive-new = "0.6.0"
vec1 = "1.10.1"
unicase = "2.7.0"
